implementations/rust/ockam/ockam/tests/node_test/fail_if_does_not_return_result.stderr
error: The function must have a return type
 --> tests/node_test/fail_if_does_not_return_result.rs:2:7
  |
2 | async fn my_test(ctx: &mut ockam_node::Context) -> String {
  |       ^^
